# jpg-to

./: .gitignore  LICENSE  Main.hs  README.md  conf.sample  jpg-cli.cabal  jpg-to.cabal
jpg-cli/: Main.hs
src/: JpgTo.hs  Main.hs
src/Network/Images/: Search.hs
