name:                jpg-to
version:             0.1.0.0
description:         Get a jpg url from a string
license:             MIT
license-file:        LICENSE
author:              Doug Patti
maintainer:          douglas.patti@gmail.com
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: git://github.com/dpatti/jpg-to.git

library
  hs-source-dirs:    src
  exposed-modules:   JpgTo
  default-language:  Haskell2010
  default-extensions: OverloadedStrings
                    , NoImplicitPrelude
  build-depends:     aeson
                   , base
                   , base-prelude
                   , bytestring
                   , lens
                   , lens-aeson
                   , random-fu
                   , random-extras
                   , random-source
                   , text
                   , wreq

executable jpg-cli
  main-is:           jpg-cli/Main.hs
  default-language:  Haskell2010
  default-extensions: NoImplicitPrelude
                    , OverloadedStrings
  build-depends:     base
                   , base-prelude
                   , configurator
                   , jpg-to
                   , text
